--- a/nimhapkg/tmpl/dashboard.tmpl
+++ b/nimhapkg/tmpl/dashboard.tmpl
@@ -5,7 +5,7 @@
 #
 #proc cardAlarm(c: var TData): string =
 # result = ""
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardAlarm" class="cardAlarm item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     # let alarmStatus = getValue(db, sql"SELECT status FROM alarm WHERE id = ?", "1")
     # template alarmClass(status: string): string =
@@ -81,7 +81,7 @@
 # result = ""
 # let certificates = getAllRows(db, sql"SELECT name, url, port FROM certificates ORDER BY name ASC")
 # if certificates.len() > 0:
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardCertificates" class="cardCertificates item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="certexpiry">
       <div class="heading">Cert expiration</div>
@@ -109,7 +109,7 @@
 # result = ""
 # let pushAll = getAllRows(db, sql"SELECT id, name FROM pushbullet_templates")
 # if pushAll.len() > 0:
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardPushbullet" class="cardPushbullet item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="pushbullet">
       <div class="heading">Pushbullet</div>
@@ -134,7 +134,7 @@
 # result = ""
 # let xiaomiDevices = getAllRows(db, sql"SELECT xdd.sid, xd.name, xdd.value_name, xdd.action FROM xiaomi_devices_data AS xdd LEFT JOIN xiaomi_devices AS xd ON xd.sid = xdd.sid WHERE xdd.triggerAlarm = ? ORDER BY xd.name ASC", "false")
 # if xiaomiDevices.len() > 0:
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardXiaomiDevice" class="cardXiaomiDevice item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="xiaomi">
       <div class="heading">Xiaomi device status</div>
@@ -159,7 +159,7 @@
 #proc cardOwntracks(c: var TData): string =
 # result = ""
 # if getAllRows(db, sql"SELECT id FROM owntracks_history").len() > 0:
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardOwntracks" class="cardOwntracks item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="owntracks">
       <div class="heading">Owntracks map <span class="owntracksRefresh badge badge-primary">Refresh</span></div>
@@ -179,7 +179,7 @@
 # result = ""
 # let mjpegStreams = getAllRows(db, sql"SELECT id, name, url FROM mjpegstream")
 # for stream in mjpegStreams:
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardMjpegstream" class="cardMjpegstream item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="mjpegstream">
       <div class="heading">
@@ -200,7 +200,7 @@
 # result = ""
 # let rssFeeds = getAllRows(db, sql"SELECT id, url, skip, fields, name FROM rss_feeds")
 # for feed in rssFeeds:
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardRss" class="cardRss item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="rss">
       <div class="heading">RSS - ${feed[4]} <span data-feedid="${feed[0]}" class="rssRefresh badge badge-primary">Refresh</span></div>
@@ -218,7 +218,7 @@
 #
 #proc cardWebsocketUsers(c: var TData): string =
 # result = ""
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardWebsocketUsers" class="cardWebsocketUsers item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="wsusers">
       <div class="heading">Websocket users</div>
@@ -236,7 +236,7 @@
 #
 #proc cardOsStats(c: var TData): string =
 # result = ""
-<div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+<div data-id="cardOsStats" class="cardOsStats item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
     <div class="osstats">
       <div class="heading">
