--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -59,6 +59,7 @@
         <li><a href="/certificates">Certificates</a></li>
         <li><a href="/cron">Cron jobs</a></li>
         <li><a href="/mail">Mail</a></li>
+        <li><a href="/mjpegstream">MJPEG stream</a></li>
         <li><a href="/owntracks">Owntracks</a></li>
         <li><a href="/pushbullet">Pushbullet</a></li>
         <li><a href="/rss">RSS</a></li>
