--- a/nimhapkg/tmpl/mjpegstream.tmpl
+++ b/nimhapkg/tmpl/mjpegstream.tmpl
@@ -24,16 +24,16 @@
          
           <h1>MJPEG streams</h1>
 
-          <div class="mjpegstreams">
+          <div class="mjpegstream">
 
-            <table class="mjpegstreams table table-bordered table-hover">
+            <table class="mjpegstream table table-bordered table-hover">
               <thead>
                 <tr class="thead-dark">
                   <th>Name</th>
                   <th>URL</th>
                   <th></th>
                 </tr>
-                <tr class="cronItemAdd">
+                <tr class="mjpegstreamItemAdd">
                   <td>
                     <input name="streamname" class="streamname form-control form-control-sm" />
                   </td>
