--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -25,7 +25,7 @@
 # if gMapsApi == "":
 <script src="http://maps.google.com/maps/api/js" type="text/javascript" defer></script>
 # else:
-<script src="https://maps.google.com/maps/api/js$gMapsApi" type="text/javascript" defer></script>
+<script src="https://maps.google.com/maps/api/js?key=$gMapsApi" type="text/javascript" defer></script>
 # end if
 
 <script src="/js/js.js" defer></script>
@@ -137,7 +137,7 @@
     # if gMapsApi == "":
       <script src="http://maps.google.com/maps/api/js" type="text/javascript" defer></script>
     # else:
-      <script src="https://maps.google.com/maps/api/js$gMapsApi" type="text/javascript" defer></script>
+      <script src="https://maps.google.com/maps/api/js?key=$gMapsApi" type="text/javascript" defer></script>
     # end if
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" defer></script>
