--- a/nimhapkg/tmpl/mqtt.tmpl
+++ b/nimhapkg/tmpl/mqtt.tmpl
@@ -24,49 +24,62 @@
          
           <h1>MQTT</h1>
 
-          <h2>Add MQTT templates</h2>
-
-          <div class="mqtt">
-
-            <table class="mqtt table table-bordered table-hover">
-              <thead>
-                <tr class="thead-dark">
-                  <th>Name</th>
-                  <th>Topic</th>
-                  <th>Message</th>
-                  <th></th>
-                </tr>
-                <tr class="mqttItemAdd">
-                  <td>
-                    <input name="mqttname" class="mqttname form-control form-control-sm" />
-                  </td>
-                  <td>
-                    <input name="mqtttopic" class="mqtttopic form-control form-control-sm" />
-                  </td>
-                  <td>
-                    <input name="mqttmessage" class="mqttmessage form-control form-control-sm" />
-                  </td>
-                  <td class="btn btn-success mqttActionAdd">
-                    Add
-                  </td>
-                </tr>
-              </thead>
-
-              <tbody>
-
-              # let mqttActions = getAllRows(db, sql"SELECT id, name, topic, message FROM mqtt_templates")
-              # for action in mqttActions:
-              <tr>
-                <td>${action[1]}</td>
-                <td>${action[2]}</td>
-                <td>${action[3]}</td>
-                <td data-actionid="${action[0]}" class="btn btn-danger mqttActionDelete">Del</td>
-              </tr>
-              # end for
-
-              </tbody>
-            </table>
+          <div>
+            <h2>Send MQTT test message</h2>
+            <form method="GET" action="/mqtt/do" style="max-width: 300px;">
+              <input name="action" value="sendtest" style="display: none;">
+              <input name="topic" placeholder="MQTT topic" class="form-control">
+              <input name="message" placeholder="MQTT message" class="form-control">
+              <button type="submit">Send test message</button>
+            </form>
           </div>
+
+          <div>
+            <h2>Add MQTT templates</h2>
+
+            <div class="mqtt">
+
+              <table class="mqtt table table-bordered table-hover">
+                <thead>
+                  <tr class="thead-dark">
+                    <th>Name</th>
+                    <th>Topic</th>
+                    <th>Message</th>
+                    <th></th>
+                  </tr>
+                  <tr class="mqttItemAdd">
+                    <td>
+                      <input name="mqttname" class="mqttname form-control form-control-sm" />
+                    </td>
+                    <td>
+                      <input name="mqtttopic" class="mqtttopic form-control form-control-sm" />
+                    </td>
+                    <td>
+                      <input name="mqttmessage" class="mqttmessage form-control form-control-sm" />
+                    </td>
+                    <td class="btn btn-success mqttActionAdd">
+                      Add
+                    </td>
+                  </tr>
+                </thead>
+
+                <tbody>
+
+                # let mqttActions = getAllRows(db, sql"SELECT id, name, topic, message FROM mqtt_templates")
+                # for action in mqttActions:
+                <tr>
+                  <td>${action[1]}</td>
+                  <td>${action[2]}</td>
+                  <td>${action[3]}</td>
+                  <td data-actionid="${action[0]}" class="btn btn-danger mqttActionDelete">Del</td>
+                </tr>
+                # end for
+
+                </tbody>
+              </table>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
