Use seq[tuple] to store Xiaomi devices instead of looking up the DB

--- a/nimhapkg/tmpl/xiaomi.tmpl
+++ b/nimhapkg/tmpl/xiaomi.tmpl
@@ -52,7 +52,7 @@
           <div class="gatewayApi">
             <h3>Gateway API</h3>
 
-            <p><i>You need the gateway api, if you want to write to the gateway, e.g. make the gateway play sounds. Otherwise you can only monitor sensors. <a href="https://www.domoticz.com/wiki/Xiaomi_Gateway_(Aqara)#Adding_the_Xiaomi_Gateway_to_Domoticz">Follow this tutorial</a></i></p>
+            <p><i>You need get the gateways password, if you want to be able to write to the gateway, e.g. make the gateway play sounds. Otherwise you can only monitor the sensors. <a href="https://www.domoticz.com/wiki/Xiaomi_Gateway_(Aqara)#Adding_the_Xiaomi_Gateway_to_Domoticz">Follow this tutorial</a></i></p>
 
             # for gw in gwApi:
               <div>
@@ -69,7 +69,7 @@
 
           <div class="deviceList">
             <h3>Available devices</h3>
-            <i>This is the devices, that are found on your network. You can update the details for each device. To auto discover new devices, click on the auto discover.</i>
+            <i>The devices found on your network. You can update the details for each device. To auto discover new devices, click on the auto discover.</i>
 
             <br>
 
