Settings to sidebar

--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -51,7 +51,6 @@
   </div>
   <ul class="list-unstyled components">
     <li><a href="/">Home</a></li>
-    <li><a href="/live">Live monitoring</a></li>
     <li>
       <a href="#submenu1" data-toggle="collapse" aria-expanded="false">Pages</a>
       <ul class="collapse list-unstyled" id="submenu1">
@@ -66,6 +65,7 @@
         <li><a href="/rss">RSS</a></li>
         <li><a href="/xiaomi/devices">Xiaomi devices</a></li>
       </ul>
+    <li><a href="/settings">Settings</a></li>
     <li><a href="https://github.com/ThomasTJdev/nim_homeassistant">Github</a></li>
     <li><a href="/logout">Logout</a></li>
   </ul>
