--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -62,6 +62,7 @@
         <li><a href="/mqtt">MQTT</a></li>
         <li><a href="/owntracks">Owntracks</a></li>
         <li><a href="/pushbullet">Pushbullet</a></li>
+        <li><a href="/rpi">Raspberry Pi</a></li>
         <li><a href="/rss">RSS</a></li>
         <li><a href="/xiaomi/devices">Xiaomi devices</a></li>
       </ul>
