--- a/nimhapkg/tmpl/dashboard.tmpl
+++ b/nimhapkg/tmpl/dashboard.tmpl
@@ -7,7 +7,7 @@
 # result = ""
 <div data-id="cardAlarm" class="cardAlarm item col-12 col-sm-6 col-md-6 col-lg-3">
   <div class="inner">
-    # let alarmStatus = getValue(db, sql"SELECT status FROM alarm WHERE id = ?", "1")
+    # let alarmStatus = getValue(db, sql"SELECT status FROM alarm")
     # template alarmClass(status: string): string =
     #   if status == alarmStatus:
     #     if alarmStatus == "disarmed":
