RSS card was not shown on dashboard

--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -112,7 +112,7 @@
 # result = ""
 #
 #
-# let cardOrderRaw = "cardAlarm,cardPushbullet,cardCertificates,cardXiaomiDevice,cardOwntracks,cardFilestream,cardWebsocketUsers,cardOsStats"
+# let cardOrderRaw = "cardAlarm,cardPushbullet,cardCertificates,cardXiaomiDevice,cardOwntracks,cardFilestream,cardRss,cardWebsocketUsers,cardOsStats"
 # var cardOrder = ""
 #
 # if not c.req.cookies.hasKey("dashboardCardOrder"):
